--- a/src/main/webapp/userprofile/registration.xhtml
+++ b/src/main/webapp/userprofile/registration.xhtml
@@ -83,8 +83,7 @@
 					</tr>
 
 					<tr>
-						<td colspan="2"><h:commandButton value="Save"
-								action="#{userController.insert}" /></td>
+						<td colspan="2"><h:commandButton value="Save" action="#{userController.insert}" /></td>
 					</tr>
 
 				</table>
