--- a/src/main/webapp/transaction/withdraw.xhtml
+++ b/src/main/webapp/transaction/withdraw.xhtml
@@ -8,7 +8,7 @@
 <body>
 	<ui:composition template="/template/bootstrap.xhtml">
 		<ui:define name="panelHeading">
-			Deposit
+			With Drawl
 		</ui:define>
 		
 		<ui:define name ="content">
@@ -37,7 +37,7 @@
 				<tr>
 					<td>
 						<h:commandButton value="Withdraw"
-					action="#{transactionController.withdraw}" />
+					action="#{transactionController.withdrawl}" />
 					</td>
 				</tr>
 			</table>	
