--- a/src/main/webapp/transaction/purchase.xhtml
+++ b/src/main/webapp/transaction/purchase.xhtml
@@ -12,7 +12,18 @@
 			<f:selectItem itemValue="" itemLabel="Select Product" />
 			<f:selectItem itemValue="AS 5000" itemLabel="AS 5000"/>
 			<f:selectItem itemValue="AS 10000" itemLabel="AS 10000"/>
-			<f:selectItem itemValue="M3 5000" itemLabel="M3 5000"/>
+			<f:selectItem itemValue="AS 25000" itemLabel="AS 25000"/>
+			<f:selectItem itemValue="AS 50000" itemLabel="AS 25000"/>
+			<f:selectItem itemValue="Simpati 5000" itemLabel="Simpati 5000"/>
+			<f:selectItem itemValue="Simpati 10000" itemLabel="Simpati 10000"/>
+			<f:selectItem itemValue="Simpati 25000" itemLabel="Simpati 25000"/>
+			<f:selectItem itemValue="Simpati 50000" itemLabel="Simpati 25000"/>
+			<f:selectItem itemValue="M3 5000" itemLabel="M3 25000"/>
+			<f:selectItem itemValue="M3 5000" itemLabel="M3 10000"/>
+			<f:selectItem itemValue="M3 5000" itemLabel="M3 50000"/>
+			<f:selectItem itemValue="Mentari 5000" itemLabel="Mentari 5000"/>
+			
+			
 		</h:selectOneMenu>
 		
 		<h:commandButton value="Purchase" action="#{transactionController.purchase}" />
