--- a/src/main/webapp/userprofile/customer.xhtml
+++ b/src/main/webapp/userprofile/customer.xhtml
@@ -10,15 +10,21 @@
 <ui:composition template="/template/bootstrap.xhtml">
 		
 		
-		<ui:define name ="panelHeadingMenu">
+		<ui:define name="panelHeadingMenu">
+		Feature
 		</ui:define>
-		
-		<ui:define name ="menu">
 
+		<ui:define name="menu">
+			<ul class="list-group">
+				<li class="list-group-item"><h:link value="Transfer"
+						outcome="/transaction/transfer" /></li>
+				<li class="list-group-item"><h:link value="Purchase Item"
+						outcome="/transaction/listItem" /></li>
+			</ul>
 		</ui:define>
 		
 		<ui:define name="panelHeading">
-			Merchant View
+			Customer View
 		</ui:define>
 		<ui:define name ="content">
 		<h3>WELCOME to Bank Ponsel</h3>
