--- a/src/main/webapp/transaction/listItem.xhtml
+++ b/src/main/webapp/transaction/listItem.xhtml
@@ -1,67 +1,62 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"> 
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<h:head></h:head> 
+<h:head></h:head>
 <body>
 
-<ui:composition template="/template/bootstrap.xhtml">
-	
-	<ui:define name ="panelHeadingMenu">
+	<ui:composition template="/template/bootstrap.xhtml">
+
+		<ui:define name="panelHeadingMenu">
 		Feature
 		</ui:define>
-		
-		<ui:define name ="menu">
-		<ul class="list-group">
-			<li class="list-group-item">
-			<h:link value="Transfer" outcome="/transaction/transfer" />
-			</li>
-			<li class="list-group-item">
-			<h:link value="Purchase Item" outcome="/transaction/listItem" />
-			</li>
-		</ul>
+
+		<ui:define name="menu">
+			<ul class="list-group">
+				<li class="list-group-item"><h:link value="Transfer"
+						outcome="/transaction/transfer" /></li>
+				<li class="list-group-item"><h:link value="Purchase Item"
+						outcome="/transaction/listItem" /></li>
+			</ul>
 		</ui:define>
 
 
 
-	<ui:define name="panelHeading">
+		<ui:define name="panelHeading">
 	List Purchase Item	
 	</ui:define>
-	
-	<ui:define name="content">
-	<center>
-	
-		<h:dataTable border="1" var="c" value="#{productController.listProduct}">
-		
-		<h:inputHidden value="#{productController.product.id}" label="Id"
-						converter="javax.faces.Long" />
-		
-			<h:column>
-				<f:facet name="header">Product Name</f:facet>
-				<h:outputText value="#{c.name}" />
-			</h:column>
-			
-			<h:column>
-				<f:facet name="header">Customer Price</f:facet>
-				<h:outputText value="#{c.price}" />
-			</h:column>
-					
-			<h:column>
-				<f:facet name="header">Action</f:facet>
-				<h:link value="Buy this item" outcome="purchaseItem" >
-					<f:param name="id" value="#{c.id}"/>
-				</h:link>
-			</h:column>
-		</h:dataTable>
-	</center>
-	</ui:define>
+
+		<ui:define name="content">
+			<center>
+
+				<h:dataTable border="1" var="c"
+					value="#{productController.listProduct}">
+
+
+					<h:column>
+						<f:facet name="header">Product Name</f:facet>
+						<h:outputText value="#{c.name}" />
+					</h:column>
+
+					<h:column>
+						<f:facet name="header">Customer Price</f:facet>
+						<h:outputText value="#{c.price}" />
+					</h:column>
+					<h:column>
+							<h:link outcome="purchaseItem.xhtml">
+								<f:param name="id" value="#{c.id}" />
+							</h:link>
+					</h:column>
+				</h:dataTable>
+			</center>
+		</ui:define>
 
 
 
 
-</ui:composition>
+	</ui:composition>
 
-</body> 
+</body>
 </html>
