--- a/src/main/webapp/userprofile/merchant.xhtml
+++ b/src/main/webapp/userprofile/merchant.xhtml
@@ -25,7 +25,7 @@
 		</ui:define>
 		
 		<ui:define name="panelHeading">
-			Customer View
+			Merchant View
 		</ui:define>
 		<ui:define name ="content">
 		<h3>WELCOME to Bank Ponsel</h3>
