--- a/src/main/webapp/userprofile/login.xhtml
+++ b/src/main/webapp/userprofile/login.xhtml
@@ -36,7 +36,7 @@
 				
 				<tr>
 					<td>
-						<h:commandButton value="save" action="#{loginController.login}" />
+						<h:commandButton value="login" action="#{loginController.login}" />
 					</td>
 				</tr>	
 			
