--- a/src/main/webapp/transaction/listItem.xhtml
+++ b/src/main/webapp/transaction/listItem.xhtml
@@ -33,7 +33,7 @@
 	
 				<h:form>
 					<h:dataTable border="1" var="c"
-						value="#{productController.listProduct}">
+						value="#{productController.listProduct}" width="69%" bodyrows="1">
 
 						<h:inputHidden value="#{c.id}" name="id"
 							converter="javax.faces.Integer" />
