--- a/src/main/webapp/userprofile/customer.xhtml
+++ b/src/main/webapp/userprofile/customer.xhtml
@@ -24,10 +24,10 @@
 		</ui:define>
 		
 		<ui:define name="panelHeading">
-			Customer View
+			CUSTOMER VIEW
 		</ui:define>
 		<ui:define name ="content">
-		<h3>WELCOME to Bank Ponsel</h3>
+		<h3>WELCOME TO BANK PONSEL</h3>
 		</ui:define>
 		
 		
